@@ -5,6 +5,7 @@ New features:
 
 Bugs fixed:
 - 2952616 internalProvider is not Threadsafe
+- 2952912 resultSockets variable is not used threadsafe
 
 Changes in 1.3.7
 ================
